--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto auto;
-        gap: 5px;
-        padding: 10px;
+        gap: 0px;
+        padding: 0px;
       }
       nav {
         background: black;
         color: white;
-        padding: 10px;
+        padding: 0px;
         display: flex;
         justify-content: space-between;
       }
       nav a {
         color: white;
-        margin: 0 10px;
+        margin: 0 0px;
         text-decoration: none;
       }
       .box {
         background-color: #768388;
         color: white;
-        padding: 20px;
+        padding: 0px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -42,10 +42,10 @@
       }
       footer {
         text-align: center;
-        padding: 10px;
+        padding: 0px;
         background: black;
         color: white;
-        margin-top: 10px;
+        margin-top: 0px;
       }
       .box1 {
         grid-column: 1;
@@ -55,18 +55,22 @@
       .box2 {
         grid-column: 2;
         grid-row: 1;
+        height: 300px;
+        width: 800px;
       }
 
       .box3 {
         grid-column: 3;
         grid-row: 1;
+        height: 300px;
+        
       }
 
       .content {
         grid-column: 2/4;
         grid-row: 2;
         background-color: #90a4ae;
-        padding: 20px;
+        padding: 0px;
         overflow: auto;
         max-height: 600px;
       }
@@ -89,24 +93,24 @@
         <img
           src="/Users/Margesh04/Desktop/Algoma Sem 4/2956 Internet Tools/Lab3/download.jpeg"
           alt="Rocket Launch"
-          width="500"
-          height="1000"
+          width="100%"
+          height="100%"
         />
       </div>
       <div class="box box2">
         <img
           src="/Users/Margesh04/Desktop/Algoma Sem 4/2956 Internet Tools/Lab3/premium_photo-1717620945061-fdb31301a205.jpeg"
           alt="Solar system"
-          width="800"
-          height="300"
+          width="100%"
+          height="100%"
         />
       </div>
       <div class="box box3">
         <img
           src="/Users/Margesh04/Desktop/Algoma Sem 4/2956 Internet Tools/Lab3/download (1).jpeg"
           alt="Mars rover"
-          width="400"
-          height="400"
+          width="100%"
+          height="100%"
         />
       </div>
       <div class="content">
