--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
           nostrum, dolor soluta voluptas! Perferendis animi, autem officia ad
           eum aspernatur commodi quos. Natus, voluptate quasi?
         </p>
+    
       </div>
     </div>
-    <footer>&copy; 2024 Your Name. All rights reserved.</footer>
+    <footer>&copy; 2024 Margesh Patel. All rights reserved.</footer>
   </body>
 </html>
