--- a/index.html
+++ b/index.html
@@ -4,77 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid Layout</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #c0c8c8;
-      }
-
-      .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto;
-        gap: 0px;
-        padding: 0px;
-      }
-      nav {
-        background: black;
-        color: white;
-        padding: 0px;
-        display: flex;
-        justify-content: space-between;
-      }
-      nav a {
-        color: white;
-        margin: 0 0px;
-        text-decoration: none;
-      }
-      .box {
-        background-color: #768388;
-        color: white;
-        padding: 0px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-      }
-      footer {
-        text-align: center;
-        padding: 0px;
-        background: black;
-        color: white;
-        margin-top: 0px;
-      }
-      .box1 {
-        grid-column: 1;
-        grid-row: 1/3;
-      }
-
-      .box2 {
-        grid-column: 2;
-        grid-row: 1;
-        height: 300px;
-        width: 800px;
-      }
-
-      .box3 {
-        grid-column: 3;
-        grid-row: 1;
-        height: 300px;
-        
-      }
-
-      .content {
-        grid-column: 2/4;
-        grid-row: 2;
-        background-color: #90a4ae;
-        padding: 20px;
-        overflow: auto;
-        max-height: 600px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <nav>
@@ -91,7 +21,7 @@
     <div class="container">
       <div class="box box1">
         <img
-          src="/Users/Margesh04/Desktop/Algoma Sem 4/2956 Internet Tools/Lab3/download.jpeg"
+          src="Images/download.jpeg"
           alt="Rocket Launch"
           width="100%"
           height="100%"
@@ -99,7 +29,7 @@
       </div>
       <div class="box box2">
         <img
-          src="/Users/Margesh04/Desktop/Algoma Sem 4/2956 Internet Tools/Lab3/premium_photo-1717620945061-fdb31301a205.jpeg"
+          src="Images/premium_photo-1717620945061-fdb31301a205.jpeg"
           alt="Solar system"
           width="100%"
           height="100%"
@@ -107,7 +37,7 @@
       </div>
       <div class="box box3">
         <img
-          src="/Users/Margesh04/Desktop/Algoma Sem 4/2956 Internet Tools/Lab3/download (1).jpeg"
+          src="Images/download (1).jpeg"
           alt="Mars rover"
           width="100%"
           height="100%"
